fix z-index form

--- a/resumeSite/resumeApp/static/css/screens/style.css
+++ b/resumeSite/resumeApp/static/css/screens/style.css
@@ -16,11 +16,9 @@ body{
 .nav-collapse {
     position: fixed;
     display: block;
-    top: 0;
-    right: 0;
-    left: 0;
     overflow: visible;
     width: 100%;
+    z-index: 1;
 }
 
 .ul-top {
@@ -75,7 +73,7 @@ body{
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 8;
 }
 
 .dropdown-content a {
